--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-Hello World
+<!DOCTYPE html>
+<html>
+
+<head>
+<style>
+/* h1 {text-align: center;}
+p {text-align: center;} */
+div {text-align: center;}
+</style>
+</head>
+
+<body>
+
+<h1 style="background-color: orange;">Tai An</h1>
+<p>Computer Graphics and Animations</p>
+<hr>
+
+<a href="https://500px.com/p/tai65535" target="_blank">Photography: outdoor stuff</a> <p>
+
+<a href="https://www.artstation.com/tai65535" target="_blank">ArtStation: programmer's art</a><p>
+
+
+
+<a href="https://tai65535.blogspot.com/" target="_blank"> Book notes </a><p>
+
+<a href="https://www.cnblogs.com/antai" target="_blank">Tech blog (75% content in Chinese)</a><p>
+
+<hr>
+
+<div><a href="https://www.linkedin.com/in/taian/" target="_blank">LinkedIn</a>
+
+<a href="https://twitter.com/tai65535" target="_blank">Twitter</a></div>
+</body>
+</html>
+
