--- a/index.html
+++ b/index.html
@@ -11,25 +11,36 @@ div {text-align: center;}
 
 <body>
 
-<h1 style="background-color: orange;">Tai An</h1>
-<p>Computer Graphics and Animations</p>
+<h1 style="background-color: orange;">Tai An</h1> 
+
+<h3>Computer Graphics and Animations</h3>
+<a href="https://www.linkedin.com/in/taian/" target="_blank">LinkedIn</a>
+<hr>
+ <img src="img/theprocess.jpg" alt="The Process" width="640" height="524"><p> 
+
+<ul>
+<li><a href="https://500px.com/p/tai65535" target="_blank">Photography: outdoor camping & hiking stuff </a></li>
+<li><a href="https://www.artstation.com/tai65535" target="_blank">ArtStation: programmer's art + graphics and animation demos</a></li>
+<li><a href="https://tai65535.blogspot.com/" target="_blank"> Random posts: essays, notes and doodles </a></li>
+<li><a href="https://www.cnblogs.com/antai" target="_blank">Chinese blog (Mostly Tech)</a></li>
+<li><a href="https://twitter.com/TyCoonAnn1" target="_blank"> Twitter 1: for posting video game screenshots</a></li>
+</ul>
+<p>
 <hr>
 
-<a href="https://500px.com/p/tai65535" target="_blank">Photography: outdoor stuff</a> <p>
 
-<a href="https://www.artstation.com/tai65535" target="_blank">ArtStation: programmer's art</a><p>
-
-
-
-<a href="https://tai65535.blogspot.com/" target="_blank"> Book notes </a><p>
-
-<a href="https://www.cnblogs.com/antai" target="_blank">Tech blog (75% content in Chinese)</a><p>
-
+<p>Old stuff</p>
+        <ul>
+        <li>Physically Based Simulation of Solid Objects' Burning, <i> Transactions on Edutainment, </i>Vol. 7, 2012, pp. 110-120 <a href="papers/TOE_Physically_based_simulation_of_solid_objects_burning.pdf" target="_blank">pdf</a> <a href="http://rd.springer.com/chapter/10.1007%2F978-3-642-29050-3_10" target="_blank">info</a> </li>
+        <li>Physically Based Simulation of Thin-shell Objects' Burning, <i>The Visual Computer,</i> Vol. 25(5-7), 2009, pp.687-696 <a href="papers/Visual_computer_thin-shell-objects-burning.pdf" target="_blank">pdf</a> <a href="http://rd.springer.com/article/10.1007/s00371-009-0344-2" target="_blank">info</a> </li>
+        <li>Combiform: Beyond Co-attentive Play, a Combinable Social Gaming Platform <i>CHI EA '12 CHI '12 Extended Abstracts on Human Factors in Computing Systems, </i> pp.1043-1046  <a href="papers/chi2012-CombiformSGC.pdf" target="_blank">pdf</a> <a href="http://dl.acm.org/citation.cfm?id=2212381&dl=ACM&coll=DL" target="_blank">info</a> </li>
+        </ul>
 <hr>
+<div>
 
-<div><a href="https://www.linkedin.com/in/taian/" target="_blank">LinkedIn</a>
-
-<a href="https://twitter.com/tai65535" target="_blank">Twitter</a></div>
+<a href="https://twitter.com/tai65535" target="_blank">Twitter</a>
+<a href="https://www.instagram.com/tai65535" target="_blank">Intagram</a> <p>
+</div>
 </body>
 </html>
 
