--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@ div {text-align: center;}
 <h3>Computer Graphics and Animations</h3>
 <a href="https://www.linkedin.com/in/taian/" target="_blank">LinkedIn</a>
 <hr>
- <img src="img/theprocess.jpg" alt="The Process" width="640" height="524"><p> 
-
+<img src="img/theprocess.jpg" alt="The Process" width="640" height="524"><p> 
+<p>^At Y-Combinator 2019 </p>
 <ul>
-<li><a href="https://500px.com/p/tai65535" target="_blank">Photography: outdoor camping & hiking stuff </a></li>
-<li><a href="https://www.artstation.com/tai65535" target="_blank">ArtStation: programmer's art + graphics and animation demos</a></li>
-<li><a href="https://tai65535.blogspot.com/" target="_blank"> Random posts: essays, notes and doodles </a></li>
-<li><a href="https://www.cnblogs.com/antai" target="_blank">Chinese blog (Mostly Tech)</a></li>
-<li><a href="https://twitter.com/TyCoonAnn1" target="_blank"> Twitter 1: for posting video game screenshots</a></li>
+<li><a href="https://500px.com/p/tai65535" target="_blank">Photography</a>: outdoor, camping and hiking</li>
+<li><img src="img/fire.gif" width="20" height="20"><a href="https://www.artstation.com/tai65535" target="_blank">ArtStation</a>: latest experiments</li>
+<li><a href="https://tai65535.blogspot.com/" target="_blank">Random posts</a>: essays, notes and doodles </li>
+<li><a href="https://www.cnblogs.com/antai" target="_blank">Tech blog</a>: 70% in Chinese, since college days</li>
+<li><a href="https://twitter.com/TyCoonAnn1" target="_blank"> Twitter 2</a>: posting video game screenshots only</li>
 </ul>
 <p>
 <hr>
@@ -41,6 +41,9 @@ div {text-align: center;}
 <a href="https://twitter.com/tai65535" target="_blank">Twitter</a>
 <a href="https://www.instagram.com/tai65535" target="_blank">Intagram</a> <p>
 </div>
+
+<img src="img/bigFireDino.jpg" alt="College Days" width="286" height="300"><p>
+Interactive Fire Simulation "Big Dino" 2008
 </body>
 </html>
 
