--- a/index.html
+++ b/index.html
@@ -10,20 +10,24 @@ div {text-align: center;}
 </head>
 
 <body>
+<p align="right">
+  <a href="https://www.linkedin.com/in/taian/" target="_blank">LinkedIn</a>
 
+<a href="https://twitter.com/tai65535" target="_blank">Twitter</a>
+<a href="https://www.instagram.com/tai65535" target="_blank">Intagram</a> <p>
+</p>
 <h1 style="background-color: orange;">Tai An</h1> 
 
 <h3>Computer Graphics and Animations</h3>
-<a href="https://www.linkedin.com/in/taian/" target="_blank">LinkedIn</a>
+
 <hr>
 <img src="img/theprocess.jpg" alt="The Process" width="640" height="524"><p> 
 <p>^At Y-Combinator 2019 </p>
 <ul>
 <li><a href="https://500px.com/p/tai65535" target="_blank">Photography</a>: outdoor, camping and hiking</li>
 <li><img src="img/fire.gif" width="20" height="20"><a href="https://www.artstation.com/tai65535" target="_blank">ArtStation</a>: latest experiments</li>
-<li><a href="https://tai65535.blogspot.com/" target="_blank">Random posts</a>: essays, notes and doodles </li>
-<li><a href="https://www.cnblogs.com/antai" target="_blank">Tech blog</a>: 70% in Chinese, since college days</li>
-<li><a href="https://twitter.com/TyCoonAnn1" target="_blank"> Twitter 2</a>: posting video game screenshots only</li>
+<li><a href="https://tai65535.blogspot.com/" target="_blank">Book notes</a>: non-tech, essays and doodles </li>
+<li><a href="https://www.cnblogs.com/antai" target="_blank">Tech blog</a>: in Chinese and English, since college days</li>
 </ul>
 <p>
 <hr>
@@ -37,9 +41,7 @@ div {text-align: center;}
         </ul>
 <hr>
 <div>
-
-<a href="https://twitter.com/tai65535" target="_blank">Twitter</a>
-<a href="https://www.instagram.com/tai65535" target="_blank">Intagram</a> <p>
+<a href="https://twitter.com/TyCoonAnn1" target="_blank"> Twitter 2</a>: posting video game screenshots only
 </div>
 
 <img src="img/bigFireDino.jpg" alt="College Days" width="286" height="300"><p>
