--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 p {text-align: center;} */
 div {text-align: center;}
 </style>
+<title>Tai An's Homepage</title>
 </head>
 
 <body>
@@ -16,7 +17,7 @@ div {text-align: center;}
 <a href="https://twitter.com/tai65535" target="_blank">Twitter</a>
 <a href="https://www.instagram.com/tai65535" target="_blank">Intagram</a> <p>
 </p>
-<h1 style="background-color: orange;">Tai An</h1> 
+<h1 style="background-color: orange;">Tai An 安泰</h1> 
 
 <h3>Computer Graphics and Animations</h3>
 
@@ -24,9 +25,9 @@ div {text-align: center;}
 <img src="img/theprocess.jpg" alt="The Process" width="640" height="524"><p> 
 <p>^At Y-Combinator 2019 </p>
 <ul>
-<li><a href="https://500px.com/p/tai65535" target="_blank">Photography</a>: outdoor, camping and hiking</li>
 <li><img src="img/fire.gif" width="20" height="20"><a href="https://www.artstation.com/tai65535" target="_blank">ArtStation</a>: latest experiments</li>
-<li><a href="https://tai65535.blogspot.com/" target="_blank">Book notes</a>: non-tech, essays and doodles </li>
+<li><a href="https://500px.com/p/tai65535" target="_blank">Photography</a>: outdoor scenery</li>
+<li><a href="https://pinetreecamper.blogspot.com" target="_blank">Pine Tree Camper</a>: travel blog</li>
 <li><a href="https://www.cnblogs.com/antai" target="_blank">Tech blog</a>: in Chinese and English, since college days</li>
 </ul>
 <p>
