--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ div {text-align: center;}
 <ul>
 <li><img src="img/fire.gif" width="20" height="20"><a href="https://www.artstation.com/tai65535" target="_blank">ArtStation</a>: latest experiments</li>
 <li><a href="https://500px.com/p/tai65535" target="_blank">Photography</a>: outdoor scenery</li>
-<li><a href="https://pinetreecamper.blogspot.com" target="_blank">Pine Tree Camper</a>: travel blog</li>
+<li><a href="https://codemonkeystonemonkey.blogspot.com" target="_blank">Pine Tree Camper</a>: travel blog</li>
 <li><a href="https://www.cnblogs.com/antai" target="_blank">Tech blog</a>: in Chinese and English, since college days</li>
 </ul>
 <p>
@@ -41,9 +41,6 @@ div {text-align: center;}
         <li>Combiform: Beyond Co-attentive Play, a Combinable Social Gaming Platform <i>CHI EA '12 CHI '12 Extended Abstracts on Human Factors in Computing Systems, </i> pp.1043-1046  <a href="papers/chi2012-CombiformSGC.pdf" target="_blank">pdf</a> <a href="http://dl.acm.org/citation.cfm?id=2212381&dl=ACM&coll=DL" target="_blank">info</a> </li>
         </ul>
 <hr>
-<div>
-<a href="https://twitter.com/TyCoonAnn1" target="_blank"> Twitter 2</a>: posting video game screenshots only
-</div>
 
 <img src="img/bigFireDino.jpg" alt="College Days" width="286" height="300"><p>
 Interactive Fire Simulation "Big Dino" 2008
