--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@ div {text-align: center;}
 <p>^At Y-Combinator 2019 </p>
 <ul>
 <li><img src="img/fire.gif" width="20" height="20"><a href="https://www.artstation.com/tai65535" target="_blank">ArtStation</a>: latest experiments</li>
-<li><a href="https://500px.com/p/tai65535" target="_blank">Photography</a>: outdoor scenery</li>
-<li><a href="https://codemonkeystonemonkey.blogspot.com" target="_blank">Pine Tree Camper</a>: travel blog</li>
-<li><a href="https://www.cnblogs.com/antai" target="_blank">Tech blog</a>: in Chinese and English, since college days</li>
+<li><a href="https://500px.com/p/tai65535" target="_blank">Photography</a></li>
+<li><a href="https://codemonkeystonemonkey.blogspot.com" target="_blank">Outdoor blog</a></li>
+<li><a href="https://www.cnblogs.com/antai" target="_blank">Tech blog</a>// in Chinese and English, since college days</li>
 </ul>
 <p>
 <hr>
